Creacion pag Inicio y pag Menu

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="module" async src="./javaScript/index.js"></script>
 </head>
 <body>
-    <p>Hola </p>
+    <a href="#">
+        <img class="logo" src="./imagenes/logoMH.jpg" />
+    </a>
+    <a href="/pagMenu">ENTRAR</a>
 </body>
 </html>
