--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio</title>
     <script type="module" async src="./javaScript/index.js"></script>
 </head>
 
@@ -29,7 +29,7 @@
                         <!-- for: vincula la etiqueta directamente al campo de entrada.-->
                         <input type="password" name="user_pwd" placeholder="Introduzca su contraseña" </li>
                     <li>
-                        <a class="olvidoPwd" href="#">¿A olvidado su contraseña?</a>
+                        <a class="olvidoPwd" href="#">¿Ha olvidado su contraseña?</a>
                     </li>
                     <div class="btnes">
                         <input class="btnLog-User" type="submit" value="Enviar" />
@@ -37,18 +37,14 @@
                         <input class="btnLog-User" type="reset"
                             value="Borrar" /><!-- type="reset" - borra todos los valores de los inputs -->
                     </div>
-                    <li class="enlaceRegistro">
-                        <label><strong>Si no estás resgistrado</strong><a href="/crearUsuario">Pincha aquí</a></label>
-                    </li>
+
                 </ul>
             </form>
         </div>
 
         <a href="/pagMenu">ENTRAR</a>
 
-        <div>
-            <a href="#">CREAR NUEVO USUARIO</a>
-        </div>
+
 
 
     </div>
