--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <a href="#">
-        <img class="logo" src="./imagenes/logoMH.jpg" />
+        <img class="logo" src="./imagenes/logo_movilidad_humana.png" width="20%"/>
     </a>
 
     <div class="main-content">
