--- a/public/index.html
+++ b/public/index.html
@@ -6,48 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <script type="module" async src="./javaScript/index.js"></script>
+    <link href="./css/estiloLogin.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <a href="#">
-        <img class="logo" src="./imagenes/logo_movilidad_humana.png" width="20%"/>
-    </a>
-
-    <div class="main-content">
-        <div class="form-usuario">
-            <h2>Acceso a tu ususario</h2>
-            <!--FORMULARIO LOGIN -->
-            <form id="formLogin">
-                <ul>
-                    <li>
-                        <label for="email">Email de usuario</label>
-                        <!-- for: vincula la etiqueta directamente al campo de entrada.-->
-                        <input type="email" name="user_usuario" placeholder="Introduzca su email" />
-                    </li>
-                    <li>
-                        <label for="pwd">Contraseña</label>
-                        <!-- for: vincula la etiqueta directamente al campo de entrada.-->
-                        <input type="password" name="user_pwd" placeholder="Introduzca su contraseña" </li>
-                    <li>
-                        <a class="olvidoPwd" href="#">¿Ha olvidado su contraseña?</a>
-                    </li>
-                    <div class="btnes">
-                        <input class="btnLog-User" type="submit" value="Enviar" />
-                        <input class="btnLog-User" id="cerrarLogin" type="submit" value="Cancelar" />
-                        <input class="btnLog-User" type="reset"
-                            value="Borrar" /><!-- type="reset" - borra todos los valores de los inputs -->
-                    </div>
-
-                </ul>
-            </form>
-        </div>
-
-        <a href="/pagMenu">ENTRAR</a>
-
-
-
-
+    <div class="divLogo">
+        <img class="logo" src="./imagenes/logo_movilidad_humana.png" />
     </div>
+
+    <main>
+        <div class="main-content">
+            <div class="form-usuario">
+                <h2>Acceso a tu ususario</h2>
+                <!--FORMULARIO LOGIN -->
+                <form id="formLogin">
+                    <ul>
+                        <li>
+                            <label for="email">Email de usuario</label>
+                            <!-- for: vincula la etiqueta directamente al campo de entrada.-->
+                            <input class="inputForm" type="email" name="user_usuario" placeholder="Introduzca su email" />
+                        </li>
+                        <li>
+                            <label for="pwd">Contraseña</label>
+                            <!-- for: vincula la etiqueta directamente al campo de entrada.-->
+                            <input class="inputForm" type="password" name="user_pwd" placeholder="Introduzca su contraseña" </li>
+
+                            <div class="botones-form">
+                                <a class="btnes" href="/pagMenu">Entrar</a>
+    
+                                <!-- <input class="btnLog-User" type="submit" value="Enviar" /> -->
+                                <input class="btnes" id="cerrarLogin" type="submit" value="Cancelar" />
+                                <input class="btnes" type="reset"
+                                    value="Borrar" /><!-- type="reset" - borra todos los valores de los inputs -->
+                            </div>
+                        <li>
+                            <a class="olvidoPwd" href="#">¿Ha olvidado su contraseña?</a>
+                        </li>
+                        
+
+                    </ul>
+                </form>
+            </div>
+
+
+        </div>
+    </main>
+    <footer>
+        © 2024 Olga Gil y Lucía Morado. Todos los derechos reservados
+    </footer>
 </body>
 
 </html>
