diseño del formulario de los datos personales de nuevo participante

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
 </head>
 
 <body>
-    <div class="divLogo">
+
+    <header class="imgLogo">
         <img class="logo" src="./imagenes/logo_movilidad_humana.png" />
-    </div>
+    </header>
 
     <main>
         <div class="main-content">
@@ -29,16 +30,18 @@
                         <li>
                             <label for="email">Email de usuario</label>
                             <!-- for: vincula la etiqueta directamente al campo de entrada.-->
-                            <input class="inputForm" type="email" name="user_usuario" placeholder="Introduzca su email" />
+                            <input class="inputForm" type="email" name="user_usuario"
+                                placeholder="Introduzca su email" />
                         </li>
                         <li>
                             <label for="pwd">Contraseña</label>
                             <!-- for: vincula la etiqueta directamente al campo de entrada.-->
-                            <input class="inputForm" type="password" name="user_pwd" placeholder="Introduzca su contraseña" </li>
+                            <input class="inputForm" type="password" name="user_pwd"
+                                placeholder="Introduzca su contraseña" </li>
 
                             <div class="botones-form">
                                 <a class="btnes" href="/pagMenu">Entrar</a>
-    
+
                                 <!-- <input class="btnLog-User" type="submit" value="Enviar" /> -->
                                 <input class="btnes" id="cerrarLogin" type="submit" value="Cancelar" />
                                 <input class="btnes" type="reset"
@@ -47,18 +50,14 @@
                         <li>
                             <a class="olvidoPwd" href="#">¿Ha olvidado su contraseña?</a>
                         </li>
-                        
-
                     </ul>
                 </form>
             </div>
-
-
         </div>
     </main>
+
     <footer>
         © 2024 Olga Gil y Lucía Morado. Todos los derechos reservados
     </footer>
 </body>
-
 </html>
